Issue #53 - Revisione portale 4.0 - Bugfix flickering e CSS menu

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1036,11 +1036,3 @@ label.mat-form-field-label:first-letter {
   }
 
 }
-
-@media (min-width: 1600px) {
-
-  .side-nav {
-    position: absolute !important;
-  }
-
-}
